--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
@@ -16,7 +17,6 @@
   "version": "1.0.0",
   "main": "app.js",
   "type": "commonjs",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon app"
   },
