--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
-    "nodemailer": "^6.9.5",
+    "nodemailer": "^6.9.13",
     "svg-captcha": "^1.4.0"
   },
   "name": "server",
@@ -18,7 +18,7 @@
   "main": "app.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon app"
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
