--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 package-lock.json
+pnpm-lock.yaml
 dist
 dist2
 dist-ssr
@@ -28,3 +29,4 @@ public
 *.njsproj
 *.sln
 *.sw?
+
