✈添加更新密码功能，修复用户信息修改功能以及部分已知问题

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ public
 .vscode
 .vscode/*
 
+pnpm-lock.yaml
 !.vscode/extensions.json
 .env
 .idea
@@ -29,4 +30,3 @@ public
 *.njsproj
 *.sln
 *.sw?
-
